; ModuleID = '/home/carl/AnghaBench/hashcat/src/modules/extr_module_03910.c_precompute_salt_md5.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/modules/extr_module_03910.c_precompute_salt_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*)* @precompute_salt_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @precompute_salt_md5(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca [4 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = bitcast [4 x i32]* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 16, i1 false)
  %9 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 0
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @md5_complete_no_limit(i32* %9, i32* %10, i32 %11)
  %13 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 0
  %14 = load i32, i32* %13, align 16
  %15 = load i32*, i32** %6, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = call i32 @u32_to_hex(i32 %14, i32* %16)
  %18 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %6, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 8
  %22 = call i32 @u32_to_hex(i32 %19, i32* %21)
  %23 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 2
  %24 = load i32, i32* %23, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 16
  %27 = call i32 @u32_to_hex(i32 %24, i32* %26)
  %28 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 3
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** %6, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 24
  %32 = call i32 @u32_to_hex(i32 %29, i32* %31)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @md5_complete_no_limit(i32*, i32*, i32) #2

declare dso_local i32 @u32_to_hex(i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
